# InterviewingPractice

./: .gitignore  README.md
Boostnote/: boostnote.json
Boostnote/notes/: 1f33890c-bcb7-45b2-9d1f-6248f715d93b.cson  4c65cac9-3fba-4b42-b965-7573c1dd035b.cson  52010998-b839-4fc6-931e-22224d337454.cson  603c4712-9b13-4a82-bf54-7d72e1873e57.cson  65fb7b67-5346-4128-ba13-4c71052fb8ff.cson  b8f74a6e-959f-43d9-bc01-75097b266a93.cson
Code/: .gitignore  .project
Code/CodeWars/: IsPrime.cpp
Code/Firecode/: 1800Problem.cpp  Anagrams.cpp  BSTValidation.cpp  BinarySearch.cpp  BinaryTree.cpp  BubbleSort.cpp  CountPaths.cpp  EvenOrOddLinkedList.cpp  EvenSplit.cpp  FindDuplicates.cpp  FindMissingNumber.cpp  FirstNonDuplicateCharacter.cpp  IsomorphicStrings.cpp  MakingChange.cpp  MaxGain.cpp  MaxSumContiguousSubsequence.cpp  MergeSort.cpp  MergingRanges.cpp  PascalsTriangle.cpp  RangeModule.cpp  RecursivePreorderTraversal.cpp  RecursiveStringPermutation.cpp  SelectionSort.cpp  SinglyLinkedList.cpp  StockMarketOracle.cpp  SubsetSummation.cpp
Code/Leetcode/: .gitignore
DSA/C/: DSA.h  README.md  TestDSA.c
DesignPatterns/AbstractFactory/: CMakeLists.txt  ComputerAbstractFactory.wsd  FactoryClient.cpp  FactoryClient.cxx  README.md
DesignPatterns/AbstractFactory/Base/: CMakeLists.txt  Component.cpp  Component.cxx  Component.h  Component.hpp
DesignPatterns/AbstractFactory/ComputerPlatforms/: Android.cxx  CMakeLists.txt  Computer.cpp  Laptop.cpp
DesignPatterns/AbstractFactory/Includes/: Android.hpp  AndroidCPU.hpp  CPU.hpp  CPUFactory.hpp  Component.hpp  Computer.hpp  ComputerFactory.hpp  Laptop.hpp  LaptopCPU.hpp
DesignPatterns/AbstractFactory/Parts/: AndroidCPU.cpp  AndroidCPU.cxx  AndroidCPU.h  AndroidCPU.hpp  AndroidRAM.cxx  CMakeLists.txt  CPU.cpp  CPU.cxx  CPU.h  CPU.hpp  CPUFactory.cpp  LaptopCPU.cpp  LaptopRAM.cpp  RAM.cpp
DesignPatterns/AbstractFactory/Sources/: Android.cxx  AndroidCPU.cxx  AndroidRAM.cxx  CMakeLists.txt  CPUFactory.cxx  Computer.cxx  ComputerFactory.cxx  FactoryClient.cxx  Laptop.cxx  LaptopCPU.cxx  LaptopRAM.cxx  RAM.cxx
DesignPatterns/Adapter/: Adapter.wsd  CMakeLists.txt  README.md
DesignPatterns/Adapter/Tests/: AdapterClientTest.cxx
DesignPatterns/Cpp/Strategy/: CMakeLists.txt  NinjutsuStrategy.wsd  README.md
DesignPatterns/Cpp/Strategy/Includes/: ChakraNatureEnum.hpp  Ninjutsu.hpp
DesignPatterns/Cpp/Strategy/Sources/: Ninja.cxx
DesignPatterns/Cpp/Strategy/Tests/: NinjutsuStrategyClientTest.cxx
DesignPatterns/Factory/: .gitignore  README.md  SellbotCogFactory.wsd  SellbotFactory.py  SellbotFactory.wsd
DesignPatterns/FactoryMethod/: README.md  SellbotCogFactoryMethod.wsd
DesignPatterns/LazySingleton/: CMakeLists.txt  LogSeverityEnum.h  Logger.cpp  Logger.h  README.md
DesignPatterns/Observer/: .gitignore  ObserverPattern.cpp  README.md
DesignPatterns/Singleton/: .gitignore  LogSeverityEnum.h  Logger.cpp  Logger.h  Logger.wsd  LoggerTest.cpp  README.md
DesignPatterns/Strategy/: NinjutsuStrategy.wsd  README.md
HackerRank/Regex/: EasyRegex.py  RegexChallenges.py
Languages/C/: BinarySearch.c  CircleAreaAndCircumference.c  DetectCyclicLinkedList.c  FactorialRecursive.c  FindMode.c  FindPairedSums.c  LeibnizSeries.c  MatrixMultiplication.c  SubtractTime.c
Languages/CPlusPlus/: AdjcentElementsProduct.cpp  InterestingPolygonArea.cpp  (+6 more)
Leetcode/: MaxConsecutiveOnes.cpp
ProjectEuler/: ProjectEuler100.java  ProjectEuler100.py
WordDocuments/: ALT Codes.txt  Command Prompt.docx  Event 1001 - DHCP.docx  README.md  Unix Shell.docx  Wi-Fi does not have a valid IP configuration.docx
(+206 files in other folders)
